# zsh-git-prompt

./: git-prompt.cabal  zsh_git_prompt
app/: BranchParse.hs  StatusParse.hs  Utils.hs
test/: SpecBranchParse.hs  SpecFunctional.hs
