name:                   git-prompt
version:                0.1.0.1
synopsis:               Informative git prompt for zsh
homepage:               https://github.com/olivierverdier/zsh-git-prompt
license:                MIT
license-file:           LICENSE.md
author:                 Olivier Verdier
maintainer:             olivier.verdier@gmail.com
build-type:             Simple
cabal-version:          >=1.10

executable gitstatus
  main-is:              Main.hs
  hs-source-dirs:       app
  other-modules:        BranchParse
                      , StatusParse
                      , Utils
  build-depends:        base >= 4.7 && < 5
                      , parsec >=3.1 && <3.2
                      , process>=1.1.0.2
                      , QuickCheck
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

test-suite tests-branch
  type:                 exitcode-stdio-1.0
  main-is:              SpecBranchParse.hs
  hs-source-dirs:       test
                      , app
  other-modules:        BranchParse
                      , StatusParse
                      , Utils
  build-depends:        base
                      , parsec >=3.1 && <3.2
                      , process>=1.1.0.2
                      , QuickCheck
  default-language:     Haskell2010

test-suite tests-functional
  type:                 exitcode-stdio-1.0
  main-is:              SpecFunctional.hs
  hs-source-dirs:       test
                      , app
  other-modules:        BranchParse
                      , StatusParse
                      , Utils
  build-depends:        base
                      , parsec >=3.1 && <3.2
                      , process>=1.1.0.2
                      , HUnit
                      , QuickCheck
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/julmue/hello
